# Fundamentals-of-algorithmization-and-programming

353501/Подгайский А.А./LabWork_1/Task_2/: line.cpp  line.h  polygon.cpp
353502/Згирская Д.Д./LabWork_1/Task_1/: Task1.pro  flagok.cpp  flagok.h  main.cpp  movingrectangle.cpp  movingrectangle.h  ship.cpp  ship.h  widget.cpp  widget.h
353502/Згирская Д.Д./LabWork_1/Task_2/: Task2.pro  commonfigure.cpp  commonfigure.h  filefunctions.cpp  filefunctions.h  filefunctions.ui  main.cpp  rectangle.cpp  rectangle.h  widget.cpp  widget.h
353502/Згирская Д.Д./LabWork_2/Task_1/: CMakeLists.txt  Date.cpp  Date.h  widget.cpp  widget.h  widget.ui
353502/Згирская Д.Д./LabWork_2/Task_2/: CMakeLists.txt  Date.cpp  Date.h  Worker.cpp  Worker.h  widget.cpp  widget.h  widget.ui
353502/Згирская Д.Д./LabWork_2/Task_3/: CMakeLists.txt  main.cpp
353502/Згирская Д.Д./LabWork_3/Task_1/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
353502/Згирская Д.Д./LabWork_3/Task_2/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
353502/Згирская Д.Д./LabWork_7/Task_1/: Deque.h  (+8 more)
353502/Згирская Д.Д./LabWork_7/Task_3/: CMakeLists.txt  HashTable.cpp  HashTable.h  Stek.cpp  Stek.h  StekNode.cpp  StekNode.h  Widget.cpp  Widget.h  Widget.ui
353502/Згирская Д.Д./LabWork_8/Task_1/: AVLTree.cpp  AVLTree.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  Node.cpp  Node.h  Widget.cpp  Widget.h  main.cpp
353502/Згирская Д.Д./Курсовая работа/: README.md
353502/Кашко А.А./Курсовая работа/: CMakeLists.txt  README.md
353502/Малиновский И.С./Курсовая работа/: README.md
353502/Худницкий А.В./Lab5/: bel.txt  heb.txt  ru.txt
353502/Худницкий А.В./LabWork_5/: arab.txt  en.txt  fr.txt  ger.txt  zhin.txt
353502/Шауро Е.А./CourseWork/: MyPet.pro  globals.cpp
353502/Шауро Е.А./Курсовая работа/: README.md
(+767 files in other folders)
